# itree

./: README.md  hello.py  itree.py  printer.py  pyproject.toml
src/itree/: main.py
