[project]
name = "itree"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "ruff>=0.8.0",
    "win32security>=2.1.0; sys_platform == 'win32'",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
itree = "itree.main:main"